Started adding WebSockets to provide the customers, shop owners and employees with real-time updates.